# benched

./: .gitignore  README.md  pyproject.toml
examples/: .sweep_cpu.yaml.swp  sweep_cpu.yaml  sweep_gpu.yaml
src/benched/: __init__.py  __main__.py  cli.py  client.py  config.py  dashboard.py  db.py  objectives.py  runner.py  server.py  workloads.py
src/benched/builders/: __init__.py  base.py  llama_cpp.py  vllm.py
src/benched/static/: style.css
src/benched/templates/: base.html  error.html  index.html  recommend.html  run.html
tests/: test_client.py  test_config.py  test_db.py
