[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benched"
version = "0.1.0"
description = "llama.cpp / vLLM parameter auto-tuning harness"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "benched contributors" },
]
keywords = ["llama.cpp", "vllm", "benchmark", "tuning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6",
    "pydantic>=2",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.110",
    "uvicorn",
    "jinja2",
    "plotly",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
benched = "benched.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/benched"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
